# rag-braintrust-bot

./: .env.example  .env.local.template  .gitignore  LICENSE  README.md  api_server.py  ingest.py  pyproject.toml  requirements.txt  simulate_logging.py
.github/workflows/: rag-simulation.yml  update-docs.yml  weekly-evals.yml
braintrust-rag-frontend/: package-lock.json  package.json  pnpm-lock.yaml
braintrust-rag-frontend/app/: page.tsx
braintrust-rag-frontend/components/: ConversationDisplay.tsx  SearchBar.tsx  SearchResults.tsx
braintrust-rag-frontend/types/: index.ts
docs/: INGESTION.md
evals/: eval_basic.py  eval_example1.py  eval_multiturn.py  eval_test.py  push_scorers.py
evals/datasets/: braintrust_documentation_qa.json  braintrust_multiturn_qa.json  braintrust_multiturn_qa_conversations.json
scripts/: setup.sh
src/rag_braintrust_bot/: __init__.py  model_sample.py  rag_demo.py  rag_simulation.py
src/rag_braintrust_bot/braintrust_resources/: __init__.py  multi_turn_prompt.py  push_scorers.py  scorers.py
src/rag_braintrust_bot/ingestion/: __init__.py  ingest.py  ingest_web.py  ingest_web_enhanced.py
src/rag_braintrust_bot/tools/: __init__.py  retrieval_tool.py
tools/: retrieval_tool.py
