[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-braintrust-bot"
version = "0.1.0"
description = "A retrieval-augmented generation system with Braintrust evaluation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Carlos Esteban"}
]
license = {text = "MIT"}
dependencies = [
    "autoevals>=0.0.127",
    "beautifulsoup4>=4.13.0",
    "braintrust[cli]>=0.2.0",
    "jsonpath>=0.82.0",
    "pinecone[grpc]>=6.0.0",
    "voyageai>=0.3.0",
    "openai>=1.40.0,<2.0.0",
    "pytz>=2025.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_braintrust_bot"]
